--- a/app/src/main/res/layout/shenghuo_item.xml
+++ b/app/src/main/res/layout/shenghuo_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="200dp"
+    android:layout_height="100dp"
     android:background="#d9ecfe">
     <ImageView
         android:id="@+id/shenghuo_img"
@@ -15,7 +15,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <TextView
