--- a/app/src/main/res/layout/activity_weather_information.xml
+++ b/app/src/main/res/layout/activity_weather_information.xml
@@ -16,9 +16,10 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             android:layout_gravity="center"
-            android:src="@mipmap/more" />
+            android:onClick="back"
+            android:src="@mipmap/back" />
 
 
         <TextView
@@ -36,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="center"
+            android:onClick="refresh"
             android:src="@mipmap/refresh" />
 
     </LinearLayout>
@@ -115,6 +117,7 @@
         android:textStyle="bold" />
 
     <LinearLayout
+        android:id="@+id/group"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
